# gotoint

./: .gitignore  Cargo.toml  README.md  couchdb.ini  docker-compose.yml
.github/workflows/: rust.yml
crawler/: Cargo.toml  Dockerfile  docker-compose.yml
crawler/src/: crawler.rs  main.rs  page.rs  tokenizer.rs  urlfilter.rs  webfilter.rs
deploy/: crawler.dev.yml  index.dev.yml
index/: Cargo.toml
index/src/: main.rs
index/src/view/: map.js
www/: index.html
