[package]
name = "index"
version = "0.1.0"
authors = ["Abel Calluaud <abelcd@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.2", features = ["json"] }
tokio = { version = "0.2.11", features = ["rt-threaded", "macros"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
futures = { version = "0.3", features = ["thread-pool"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"